example-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-all-traffic
  namespace: my-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
